// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationCommandsPage integration generate command: generated command 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "key": "REGISTRATION_COMMANDS",
          "params": Object {
            "downloadUtility": "curl",
            "hostgroupId": undefined,
            "insecure": false,
            "jwtExpiration": 4,
            "locationId": 4,
            "operatingsystemId": undefined,
            "organizationId": 3,
            "packages": "",
            "repoData": Array [],
            "setupInsights": "",
            "setupRemoteExecution": "",
            "smartProxyId": undefined,
            "updatePackages": false,
          },
          "url": "/hosts/register",
        },
        "type": "API_POST",
      },
    ],
  ],
  "state": Object {
    "apiReducer": Object {
      "REGISTRATION_COMMANDS": Object {
        "payload": Object {
          "url": "/hosts/register",
        },
        "response": null,
        "status": "PENDING",
      },
      "REGISTRATION_COMMANDS_DATA": Object {
        "payload": Object {
          "url": "/hosts/register/data",
        },
        "response": null,
        "status": "PENDING",
      },
    },
  },
}
`;

exports[`RegistrationCommandsPage integration generate command: rendered 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "key": "REGISTRATION_COMMANDS_DATA",
          "params": Object {
            "location_id": 4,
            "organization_id": 3,
          },
          "url": "/hosts/register/data",
        },
        "type": "API_GET",
      },
    ],
  ],
  "state": Object {
    "apiReducer": Object {
      "REGISTRATION_COMMANDS_DATA": Object {
        "payload": Object {
          "url": "/hosts/register/data",
        },
        "response": null,
        "status": "PENDING",
      },
    },
  },
}
`;
